RESOLVED FIXED291932
[MSE] Assertion in WebKit::RemoteMediaSourceProxy::addSourceBuffer
https://bugs.webkit.org/show_bug.cgi?id=291932
Summary [MSE] Assertion in WebKit::RemoteMediaSourceProxy::addSourceBuffer
Jean-Yves Avenard [:jya]
Reported 2025-04-22 23:17:10 PDT
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-04-22 23:17:19 PDT
Jean-Yves Avenard [:jya]
Comment 2 2025-04-22 23:20:43 PDT
EWS
Comment 3 2025-04-23 22:01:06 PDT
Committed 294043@main (7bd7bbbe097c): <https://commits.webkit.org/294043@main> Reviewed commits have been landed. Closing PR #44405 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.