[MSE] Assertion in WebKit::RemoteMediaSourceProxy::addSourceBuffer https://bugs.webkit.org/show_bug.cgi?id=291932 rdar://149290374

Reviewed by Youenn Fablet.

The completion handler given to RemoteMediaSourceProxy::addSourceBuffer
wasn't always called.
Ensure the completion handler is called when the RemoteMediaSourceProxy is
in a bad state, including when RemoteMediaSourceProxy::setPrivateAndOpen wasn't called.

Add crash test.
* LayoutTests/ipc/invalid-addSourceBuffer-to-GPU-process-crash-expected.txt: Added.
* LayoutTests/ipc/invalid-addSourceBuffer-to-GPU-process-crash.html: Added.
* Source/WebKit/GPUProcess/media/RemoteMediaSourceProxy.cpp:
(WebKit::RemoteMediaSourceProxy::addSourceBuffer):

Canonical link: https://commits.webkit.org/294043@main